--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -27,7 +27,7 @@
                     <TextBlock Margin="0,4" Text="Календарь" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                     <TextBlock Margin="0,4" Text="Станции" TextWrapping="Wrap" Name="Stations" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="Stations_Tap" />
                     <TextBlock Margin="0,4" Text="Объявления" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                    <TextBlock Margin="0,4" Text="Новости" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                    <TextBlock Margin="0,4" Text="Новости" TextWrapping="Wrap" Name="NewMenuItem" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="NewMenuItem_Tap" />
                     <TextBlock Margin="0,4" Text="Справка" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                     <TextBlock Margin="0,4" Text="Профиль" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                 </StackPanel>
@@ -55,12 +55,12 @@
 
             <controls:PanoramaItem Header="Новости">
                 <!--Double line list with text wrapping-->
-                <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Items}">
+                <ListBox Margin="0,0,-12,0" ItemsSource="{Binding News.Items}" SelectionChanged="ListBox_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Margin="0,0,0,17" Width="432" Height="78">
-                                <TextBlock Text="{Binding LineOne}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
