--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -24,11 +24,11 @@
             <!--Panorama item one-->
             <controls:PanoramaItem Header="Меню">
                 <StackPanel>
-                    <TextBlock Margin="0,4" Text="Календарь" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                    <TextBlock Margin="0,4" Text="Станции" TextWrapping="Wrap" Name="Stations" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="Stations_Tap" />
-                    <TextBlock Margin="0,4" Text="Объявления" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                    <TextBlock Margin="0,4" Text="Календарь" TextWrapping="Wrap" Name="CalendarMenuText"  Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="CalendarMenuText_Tap" />
+                    <TextBlock Margin="0,4" Text="Станции" TextWrapping="Wrap" Name="StationsMenu" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="Stations_Tap" />
+                    <TextBlock Margin="0,4" Text="Объявления" TextWrapping="Wrap" Name="NewMenuText" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                     <TextBlock Margin="0,4" Text="Новости" TextWrapping="Wrap" Name="NewMenuItem" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="NewMenuItem_Tap" />
-                    <TextBlock Margin="0,4" Text="Справка" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                    <TextBlock Margin="0,4" Text="Справка" TextWrapping="Wrap" Name="HelpMenuText" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                     <TextBlock Margin="0,4" Text="Профиль" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                 </StackPanel>
             </controls:PanoramaItem>
@@ -37,15 +37,13 @@
             <!--Use 'Orientation="Horizontal"' to enable a panel that lays out horizontally-->
             <controls:PanoramaItem Header="Планы">
                 <!--Double line list with image placeholder and text wrapping-->
-                <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Items}">
+                <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Events.Items}" Name="EventsList" SelectionChanged="EventsList_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,17">
-                                <!--Replace rectangle with image-->
-                                <Rectangle Height="100" Width="100" Fill="#FFE5001b" Margin="12,0,9,0"/>
-                                <StackPanel Width="311">                                    
-                                    <TextBlock Text="{Binding LineOne}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,17">          
+                                <StackPanel>                                    
+                                    <TextBlock Text="{Binding Date}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                                    <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                                 </StackPanel>
                             </StackPanel>
                         </DataTemplate>
