--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="800" 
     d:DataContext="{d:DesignData SampleData/MainViewModelSampleData.xaml}"
@@ -72,7 +73,8 @@
             <controls:PanoramaItem Header="Профиль">
                 <StackPanel>
                 <StackPanel Name="LoginForm">
-                    <TextBlock Text="Введите e-mail" />
+                                  <toolkit:PerformanceProgressBar HorizontalAlignment="Left" Height="8" Margin="0" VerticalAlignment="Top" IsIndeterminate="False" Width="460" Name="LoginLoadingBar" />
+                        <TextBlock Text="Введите e-mail" />
                     <TextBox x:Name="email" Text="m0rg0t.Anton@gmail.com" />
                     <TextBlock Text="Введите пароль" />
                     <PasswordBox x:Name="password" Password="slucladr" />
@@ -94,7 +96,7 @@
                     </StackPanel>
                     <StackPanel Margin="0,10">
                         <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                        <TextBlock Text="18" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        <TextBlock Text="" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                     </StackPanel>
                     <TextBlock Margin="0,20" Text="Изменить" TextWrapping="Wrap" Name="EditProfile" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="TextBlock_Tap" />
                 </StackPanel>
