--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
+    xmlns:WPExtensions="clr-namespace:WPExtensions;assembly=WPExtensions"
     x:Class="Donor.ProfileLogin" 
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -18,10 +19,42 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Pivot Control-->
-        <controls:Pivot Title="профиль">
+        <controls:Pivot Loaded="Pivot_Loaded">
+            <controls:Pivot.Title>
+                <StackPanel>
+                <toolkit:PerformanceProgressBar HorizontalAlignment="Left" Height="8" Margin="0" VerticalAlignment="Top" IsIndeterminate="False" Width="460" Name="LoadingBar" />
+                <TextBlock Text="профиль"/>   
+                </StackPanel>
+            </controls:Pivot.Title>
             <!--Pivot item one-->
             <controls:PivotItem Header="аккаунт">
                 <Grid>
+                    <StackPanel Name="EditProfile" Visibility="Collapsed">
+                    <TextBlock Text="Имя" />
+                    <TextBox Name="EditName" Text="{Binding Path=App.ViewModel.User.Name, Mode=TwoWay}" />
+                        <TextBlock Text="Пол" />
+                        <StackPanel Orientation="Horizontal" Name="SexEditGroup">
+                            <RadioButton Content="Мужской" Name="EditMale" />
+                            <RadioButton Content="Женский" Name="EditFemale" DataContext="{Binding}" />
+                        </StackPanel>
+
+                        <TextBlock Text="Группа крови" />
+                        <StackPanel>
+                        <toolkit:WrapPanel ItemHeight="90" ItemWidth="210" Name="BloudTypeGroupEdit">
+                            <RadioButton Content="O(I)" Name="o" />
+                            <RadioButton Content="A(II)" Name="a" />            
+                        
+                            <RadioButton Content="B(III)" Name="b" />
+                            <RadioButton Content="AB(IV)" Name="ab" />
+                        </toolkit:WrapPanel>
+                        </StackPanel>
+
+                        <TextBlock Text="Резус-фактор" />
+                        <StackPanel Orientation="Horizontal" Name="RHedit">
+                            <RadioButton Content="RH+" Name="EditRHpl" />
+                            <RadioButton Content="RH-" Name="EditRHd" DataContext="{Binding}" />
+                        </StackPanel>
+                    </StackPanel>
                     <StackPanel Margin="0,10" Name="UserProfile" Visibility="Collapsed">
                         <StackPanel>
                             <TextBlock Text="Имя" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
@@ -37,8 +70,8 @@
                         </StackPanel>
                         <StackPanel Margin="0,10">
                             <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                            <TextBlock Text="18" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                        </StackPanel>
+                            <TextBlock Text="" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        </StackPanel>                 
                     </StackPanel>
                     <StackPanel Name="RegisterForm" Visibility="Collapsed">
                         <TextBlock Text="Логин" />
@@ -63,6 +96,16 @@
 
                         <Button Name="RestorePassword" Content="Восстановить пароль" Click="RestorePassword_Click" />
                     </StackPanel>
+                    <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="False" IsMenuEnabled="False">
+                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Text="Редактировать" Visibility="Visible" Click="AdvancedApplicationBarIconButton_Click" />
+                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.delete.rest.png" Text="Удалить" Visibility="Visible"/>
+                        
+<WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.save.rest.png" Text="Сохранить" Visibility="Collapsed" Name="SaveEditProfileButton" Click="SaveEditProfileButton_Click" />
+                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Text="Отмена" Visibility="Collapsed" Name="CancelEditProfileButton" Click="CancelEditProfileButton_Click" />
+                        
+                    </WPExtensions:AdvancedApplicationBar>                
+                    
+                    
                 </Grid>
             </controls:PivotItem>
 
@@ -86,7 +129,7 @@
                     </ScrollViewer>
                 </Grid>
             </controls:PivotItem>
-        </controls:Pivot>
+        </controls:Pivot>        
     </Grid>
     
 </phone:PhoneApplicationPage>
